# natsirtguy-python-package-quickstart

./: LICENSE  README.md  cookiecutter.json
hooks/: pre_gen_project.py  pre_gen_project.py~
{{cookiecutter.project_slug}}/: LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: core.py
{{cookiecutter.project_slug}}/tests/: test_core.py
