[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
dependencies = []
requires-python = ">={{ cookiecutter.min_python_version }}"

[project.optional-dependencies]
dev = [
    "hatch",
    "mypy",
    "pytest",
    "pytest-cov",
    "pylsp-mypy",
    "python-lsp-server",
    "python-lsp-ruff",
    "ruff",
    "tox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "pyproject.toml",
    "README.md"
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov={{ cookiecutter.package_name }}"
testpaths = ["tests"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.tox]
envlist = ["format-check", "type-check", "py39", "py310", "py311", "py312", "py313"]
isolated_build = true

[tool.tox.env.default]
deps = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
commands = [["pytest", "{posargs:tests}"]]

[tool.tox.env.type-check]
deps = ["mypy>=1.8.0"]
commands = [["mypy", "src/{{ cookiecutter.package_name }}"]]

[tool.tox.env.format]
deps = ["ruff>=0.1.9"]
commands = [
    ["ruff", "check"],
    ["ruff", "format"]
]

[tool.tox.env.format-check]
deps = ["ruff>=0.1.9"]
commands = [
    ["ruff", "check"],
    ["ruff", "format", "--diff"]
]
